syntax = "proto3";

service MyService {
  rpc Delete (MyRequest) returns (MyResponse);
}

message MyRequest {
  string path = 1;
}

message MyResponse {
  int32 status = 2;
}
